# exercism

./: .gitignore  readme.md
python/: pyproject.toml  readme.md
python/anagram/: anagram.py  fancy.py  short.py
python/armstrong-numbers/: armstrong_numbers.py
python/binary-search/: binary_search.py
python/black-jack/: black_jack.py
python/bob/: bob.py
python/card-games/: lists.py
python/cater-waiter/: sets.py
python/chaitanas-colossal-coaster/: list_methods.py
python/collatz-conjecture/: collatz_conjecture.py
python/currency-exchange/: exchange.py  pydantinc_exchange.py
python/darts/: darts.py
python/ellens-alien-game/: classes.py
python/ghost-gobble-arcade-game/: arcade_game.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/house/: house.py
python/inventory-management/: dicts.py
python/isbn-verifier/: isbn_verifier.py
python/isogram/: isogram.py
python/leap/: leap.py
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/locomotive-engineer/: locomotive_engineer.py
python/making-the-grade/: loops.py
python/mecha-munch-management/: dict_methods.py
python/meltdown-mitigation/: conditionals.py
python/pangram/: pangram.py
python/perfect-numbers/: perfect_numbers.py
python/plane-tickets/: generators.py
python/protein-translation/: mateis_test.py  protein_translation.py
python/raindrops/: raindrops.py  raindrops_test.py
python/resistor-color-duo/: resistor_color_duo.py
python/resistor-color-expert/: resistor_color_expert.py
(+27 files in other folders)
