[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Matei Pinzaru <matei@avocado.solutions>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
