[project]
name = "exercism"
version = "0.1.0"
description = ""
authors = [{ name = "Matei Pinzaru", email = "matei@avocado.solutions" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pytest>=7.4.4,<8",
    "pydantic>=2.5.3,<3",
    "nltk>=3.8.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exercism"]